# tricky-addon-enhanced

./: .gitignore  CHANGELOG.md  README.md  customize.sh  hotinstall.sh  install_func.sh  module.prop  package.sh  prop.sh  service.sh  uninstall.sh  update.json
common/: common.sh  rom-fingerprints.txt
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/automation/: target.rs  watcher.rs
rust/src/cli/: applist.rs  handlers.rs  mod.rs  webui_init.rs
rust/src/config/: mod.rs
rust/src/daemon/: mod.rs  scheduler.rs  tasks.rs
rust/src/health/: mod.rs
rust/src/keybox/: mod.rs  sources.rs  validate.rs
rust/src/keybox/roots/: status.json
rust/src/module/: mod.rs
rust/src/platform/: mod.rs  packages.rs  props.rs
rust/src/region/: mod.rs
rust/src/security_patch/: mod.rs
rust/src/status/: mod.rs
rust/src/vbhash/: mod.rs
webui/: index.html
webui/assets/: index-BAzk58Ad.css  index-migrated.min.js
webui/locales/: template.xml
webui/locales/strings/: ar.xml  az.xml  bn.xml  de.xml  el.xml  en.xml  es-ES.xml  fa.xml  fr.xml  id.xml  it.xml  ja.xml  ko.xml  pl.xml  pt-BR.xml  ru.xml  th.xml  tl.xml  tr.xml  uk.xml  vi.xml  zh-CN.xml  zh-TW.xml
